--- a/public/style.css
+++ b/public/style.css
@@ -42,11 +42,8 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-  #app {
-    margin: 10px !important;
-  }
-  .home {
-    margin: 10px;
+  body {
+    margin: 1.5em;
   }
 }
 
@@ -147,3 +144,14 @@ h1 a {
   font-family: "Fira Code", "IBM Plex Mono", monospace;
   color: var(--link-purple);
 }
+
+canvas {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
